# stm32h723zgt6_st7789_button_encoder_display

./: Cargo.toml  TUT.md  converter.py
.cargo/: config.toml
assets/: HOW_TO_USE.txt
assets/mode_0/: 1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  avatar.raw  chii.raw  classic.raw  hachi.raw  rp.raw  usagi.raw  xiaohei.raw  xiaohei_cute.raw
assets/mode_1/: 1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  avatar.raw  chii.raw  classic.raw  hachi.raw  rp.raw  usagi.raw  xiaohei.raw  xiaohei_cute.raw
assets/mode_2/: 1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  avatar.raw  chii.raw  classic.raw  hachi.raw  rp.raw  usagi.raw  xiaohei.raw  xiaohei_cute.raw
assets/mode_3/: 1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  avatar.raw  chii.raw  classic.raw  hachi.raw  rp.raw  usagi.raw  xiaohei.raw  xiaohei_cute.raw
assets/mode_4/: 1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  avatar.raw  chii.raw  classic.raw  hachi.raw  rp.raw  usagi.raw  xiaohei.raw  xiaohei_cute.raw
assets/mode_5/: 1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  avatar.raw  chii.raw  classic.raw  hachi.raw  rp.raw  usagi.raw  xiaohei.raw  xiaohei_cute.raw
assets/mode_6/: 1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  avatar.raw  chii.raw  classic.raw  hachi.raw  rp.raw  usagi.raw  xiaohei.raw  xiaohei_cute.raw
assets/mode_7/: 1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  avatar.raw  chii.raw  classic.raw  hachi.raw  rp.raw  usagi.raw  xiaohei.raw  xiaohei_cute.raw
src/: main.rs
