[package]
name = "embassy_h7_st7789_button_encoder"
version = "0.1.0"
edition = "2024"


[dependencies]
embassy-stm32 = { version = "0.2.0",  features = [ "defmt", "stm32h723zg", "unstable-pac", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0",  features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0",  features = ["defmt"] }
embassy-futures = { version = "0.1.1"}

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
# embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.0", default-features = false }
nb = "1.1.0"
static_cell = "2.1.0"

# st7789
# spi st7789
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
embedded-hal = "0.2"
st7789 = "0.7.0"


[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
# opt-level = "s"         # 
overflow-checks = false
lto = "fat"